--- a/DragonTacticsSheet.css
+++ b/DragonTacticsSheet.css
@@ -148,20 +148,14 @@ div.sheet-tab-content {
 			ROLLTEMPLATES
 */
 
+/* attack */
+
 .sheet-rolltemplate-attack table {
     width: 189px;
     padding: 2px;
 		border: 1px solid;
     background-color: #ffffff;
 }
-
-.sheet-rolltemplate-damage table {
-    width: 189px;
-    padding: 2px;
-		border: 1px solid;
-    background-color: #ffffff;
-}
- 
 .sheet-rolltemplate-attack th {
 		color: rgb(126, 45, 64);
     padding-left: 5px;
@@ -172,16 +166,6 @@ div.sheet-tab-content {
     font-variant: small-caps;
 }
 
-.sheet-rolltemplate-damage th {
-		color: rgb(126, 45, 64);
-    padding-left: 5px;
-		line-height: 1.6em;
-		font-size: 1.2em;
-    text-align: left;
-		font-family: "Times New Roman", Times, serif;
-    font-variant: small-caps;
-}
- 
 .sheet-rolltemplate-attack .sheet-subheader {
     color: #000;
     font-size: 1em;
@@ -198,10 +182,6 @@ div.sheet-tab-content {
     font-style: italic;
 }
 
-.sheet-rolltemplate-damage .sheet-tcat {
-    font-style: italic;
-}
- 
 .sheet-rolltemplate-attack td {
     padding-left: 5px;
 }
@@ -221,9 +201,25 @@ div.sheet-tab-content {
     border: none;
 }
  
-.sheet-rolltemplate-attack .sheet-rolltemplate-damage .inlinerollresult.importantroll {
-		color: #4A57ED;
-    border: none;
+/* damage */
+
+.sheet-rolltemplate-damage table {
+    width: 189px;
+    padding: 2px;
+		border: 1px solid;
+    background-color: #ffffff;
+}
+.sheet-rolltemplate-damage th {
+		color: rgb(126, 45, 64);
+    padding-left: 5px;
+		line-height: 1.6em;
+		font-size: 1.2em;
+    text-align: left;
+		font-family: "Times New Roman", Times, serif;
+    font-variant: small-caps;
+}
+.sheet-rolltemplate-damage .sheet-tcat {
+    font-style: italic;
 }
 
 .sheet-rolltemplate-damage td {
@@ -234,7 +230,11 @@ div.sheet-tab-content {
     background-color: #ffffff;
     border: none;
 }
- 
+
+.sheet-rolltemplate-damage .inlinerollresult.importantroll {
+		color: #4A57ED;
+    border: none;
+}
 .sheet-rolltemplate-damage .inlinerollresult.fullcrit {
 		color: #3FB315;
     border: none;
@@ -245,7 +245,66 @@ div.sheet-tab-content {
     border: none;
 }
  
-.sheet-rolltemplate-damage .sheet-rolltemplate-damage .inlinerollresult.importantroll {
+.sheet-rolltemplate-damage .inlinerollresult.importantroll {
+		color: #4A57ED;
+    border: none;
+}
+
+/* skillcheck */
+
+.sheet-rolltemplate-skillcheck table {
+    width: 189px;
+    padding: 2px;
+		border: 1px solid;
+    background-color: #ffffff;
+}
+
+.sheet-rolltemplate-skillcheck th {
+		color: rgb(126, 45, 64);
+    padding-left: 5px;
+		line-height: 1.6em;
+		font-size: 1.2em;
+    text-align: left;
+		font-family: "Times New Roman", Times, serif;
+    font-variant: small-caps;
+}
+
+.sheet-rolltemplate-skillcheck .sheet-subheader {
+    color: #000;
+    font-size: 1em;
+    font-style: italic;
+}
+
+.sheet-rolltemplate-skillcheck .sheet-tcat {
+    font-style: italic;
+}
+ 
+.sheet-rolltemplate-skillcheck td {
+    padding-left: 5px;
+}
+ 
+.sheet-rolltemplate-skillcheck .sheet-arrow-right {
+    border-top: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+		border-left: 180px solid rgb(126, 45, 64);
+}
+ 
+.sheet-rolltemplate-skillcheck .inlinerollresult  {
+    background-color: #ffffff;
+    border: none;
+}
+ 
+.sheet-rolltemplate-skillcheck .inlinerollresult.fullcrit {
+		color: #3FB315;
+    border: none;
+}
+ 
+.sheet-rolltemplate-skillcheck .inlinerollresult.fullfail {
+		color: #B31515;
+    border: none;
+}
+ 
+.sheet-rolltemplate-skillcheck .inlinerollresult.importantroll {
 		color: #4A57ED;
     border: none;
 }
