--- a/DragonTacticsSheet.css
+++ b/DragonTacticsSheet.css
@@ -1,168 +1,220 @@
-/*
- 		HEADERS AND BACKGROUND
-*/
+/********
 
-.charsheet {
-	background-color: #EEE5CE;
+PHB STYLING
+
+********/
+
+.charsheet h1,
+.charsheet h2,
+.charsheet h3,
+.charsheet h4 {
+    margin-top: .2em;
+    margin-bottom: .2em;
+    font-family: MrJeeves;
+    font-weight: 800;
+    color: #58180D;
 }
 
-.charsheet h1, .charsheet h2, .charsheet h3, .charsheet h4{
-    margin-top:         .2em;               
-    margin-bottom:      .2em;
-    font-family:        MrJeeves;
-    font-weight:        800;
-    color:              #58180D;
+.charsheet h2 {
+    font-size: .705cm;
 }
 
-.charsheet h2{
-    font-size:          .705cm;             
+.charsheet h3 {
+    font-size: .529cm;
+    border-bottom: 2px solid #c9ad6a
 }
 
-.charsheet h3{
-    font-size:          .529cm;
-    border-bottom:      2px solid #c9ad6a   
+.charsheet h4 {
+    margin-bottom: 0;
+    font-size: .458cm
 }
 
-.charsheet h4{
-    margin-bottom:      0;                  
-    font-size:          .458cm
+/********
+
+GRID
+
+********/
+
+.sheet-main {
+    display: grid;
+    grid-gap: 4px;
+    grid-template-areas: "header header header"
+        "common  abilities  competencies"
+        "standard   abilities  competencies"
+        "standard   defense     effects"
+        "standard   minor       reaction"
+        "mve        minor       reaction"
+        "worn       backpack    features";
+    min-width: 9.25;
 }
 
-/*
-				INPUTS
-*/
-
-.sheet-AttSelect select{
-    width:      120px;
-}
-
-.sheet-DefSelect select{
-	width: 		70px;
-}
-
-.sheet-raceclass input{
-    width:      150px;
-}
-
-.sheet-wepDamSelect select{
-    width:      70px;
-}
-
-input.sheet-diceInput {
-	width: 140px;
-}
-
-input.sheet-arrow:not(:checked) ~ div.sheet-body {
+input.sheet-arrow:not(:checked)~div.sheet-body {
     display: none;
 }
 
-select.sheet-ActionType{
-    width: 105px;
-}
-
-select.sheet-AccesorySelect{
-	width: 120px;
-}
-
-.sheet-AttSelect-AC select{
-	width: 160px;
-}
-
-.sheet-tab3 input{
-    width: 350px;
-}
-
-input.sheet-Item{
-    width: 187px;
-}
-
-label.sheet-inlineLabel {
-	display: inline;
-}
-
-/*
-				TABS
-*/
-
-div.sheet-tab-content { display: none; }
-input.sheet-tab1:checked ~ div.sheet-tab1,
-input.sheet-tab2:checked ~ div.sheet-tab2,
-input.sheet-tab3:checked ~ div.sheet-tab3,
-input.sheet-tab4:checked ~ div.sheet-tab4 { display: block; }
-
-input.sheet-tab {
-    width: 150px;
-    height: 30px;
+.sheet-body { /* Dropdown areas */
     position: relative;
-    top: 5px;
-    left: 6px;
-    margin: -1.5px;
-    cursor: pointer;
-    z-index: 1;
-    opacity: 0;
+    background: #faf7ea;
+    -webkit-box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
+    box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
+    margin: 1rem 0em;
+    padding: 1em 1em;
+    border-radius: 0.28571429rem;
+    border: 1px solid rgba(34, 36, 38, 0.15);
 }
 
-input.sheet-tab + span::before {
-    content: attr(title);
-    border: solid 1px #a8a8a8;
-    border-bottom-color: black;
-    text-align: center;
-    display: inline-block;
-    background: #846c2e;
-    width: 150px;
-    height: 30px;
-    font-size: 18px;
-    position: absolute;
-    top: 70px;
-    left: 30px;
+.charsheet textarea {
+    width: 95%;
 }
 
-input.sheet-tab:checked + span::before {
-    background: #bd9a42;
-    border-bottom-color: #000;
-}
-
-input.sheet-tab:not(:first-child) + span::before { border-left: none; }
-
-input.sheet-tab2 + span::before {
-    left: 180px;
-}
-
-input.sheet-tab3 + span::before { 
-    left: 330px;
-}
-
-input.sheet-tab4 + span::before { 
-    left: 480px; 
-}
-
-div.sheet-tab-content {
-    border: 1px solid #a8a8a8;
-    border-top-color: #000;
-    margin: 5px 0 0 5px;
+.sheet-section {
     padding: 5px;
+    border-style: solid;
+    background-color: #EEE5CE;
+}
+
+.sheet-flex-col {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.sheet-flex-center {
+    align-items: center;
+    justify-content: center;
+}
+
+.sheet-header {
+    grid-area: header;
+    flex-direction: column;
+}
+
+.sheet-common {
+    grid-area: common;
 }
 
 
-/*
-			ROLLTEMPLATES
-*/
+.sheet-abilities {
+    grid-area: abilities;
+}
 
-/* attack */
+.sheet-competencies {
+    grid-area: competencies;
+}
+
+.sheet-defense {
+    grid-area: defense;
+}
+
+.sheet-effects {
+    grid-area: effects;
+}
+
+.sheet-standard {
+    grid-area: standard;
+}
+
+.sheet-move {
+    grid-area: mve;
+}
+
+.sheet-minor {
+    grid-area: minor;
+}
+
+.sheet-reaction {
+    grid-area: reaction;
+}
+
+.sheet-features {
+    grid-area: features;
+}
+
+.sheet-worn {
+    grid-area: worn;
+}
+
+.sheet-backpack {
+    grid-area: backpack;
+}
+
+/******
+
+MISC
+
+******/
+
+
+.sheet-inlineLabel {
+    display: inline;
+}
+
+
+.sheet-AttSelect-AC select {
+    width: 160px;
+}
+
+.sheet-speedIn {
+    width: 160px;
+}
+
+.sheet-diceInput {
+    width: 140px;
+}
+
+.sheet-wepDamSelect {
+    width: 70px;
+}
+
+.sheet-Item {
+    width: 150px;
+}
+
+.sheet-Usage {
+    width: 100px;
+}
+
+.sheet-Action {
+    width: 150px;
+}
+
+.sheet-AttSelect select {
+    width: 100px;
+}
+
+.sheet-DefSelect select {
+    width: 85px;
+}
+
+
+select.sheet-AccesorySelect {
+    width: 120px;
+}
+
+.sheet-DamageRoll,
+.sheet-AttackRoll {
+    font-size: 140%;
+}
+
+/*****
+
+ROLL TEMPLATES
+
+*****/
 
 .sheet-rolltemplate-attack table {
     width: 189px;
     padding: 2px;
-		border: 1px solid;
+    border: 1px solid;
     background-color: #ffffff;
 }
+
 .sheet-rolltemplate-attack th {
-		color: rgb(126, 45, 64);
+    color: rgb(126, 45, 64);
     padding-left: 5px;
-		line-height: 1.6em;
-		font-size: 1.2em;
+    line-height: 1.6em;
+    font-size: 1.2em;
     text-align: left;
-		font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman", Times, serif;
     font-variant: small-caps;
 }
 
@@ -171,13 +223,13 @@ div.sheet-tab-content {
     font-size: 1em;
     font-style: italic;
 }
- 
+
 .sheet-rolltemplate-attack .sheet-arrow-right {
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
-		border-left: 180px solid rgb(126, 45, 64);
+    border-left: 180px solid rgb(126, 45, 64);
 }
- 
+
 .sheet-rolltemplate-attack .sheet-tcat {
     font-style: italic;
 }
@@ -185,39 +237,41 @@ div.sheet-tab-content {
 .sheet-rolltemplate-attack td {
     padding-left: 5px;
 }
- 
-.sheet-rolltemplate-attack .inlinerollresult  {
+
+.sheet-rolltemplate-attack .inlinerollresult {
     background-color: #ffffff;
     border: none;
 }
- 
+
 .sheet-rolltemplate-attack .inlinerollresult.fullcrit {
-		color: #3FB315;
+    color: #3FB315;
     border: none;
 }
- 
+
 .sheet-rolltemplate-attack .inlinerollresult.fullfail {
-		color: #B31515;
+    color: #B31515;
     border: none;
 }
- 
+
 /* damage */
 
 .sheet-rolltemplate-damage table {
     width: 189px;
     padding: 2px;
-		border: 1px solid;
+    border: 1px solid;
     background-color: #ffffff;
 }
+
 .sheet-rolltemplate-damage th {
-		color: rgb(126, 45, 64);
+    color: rgb(126, 45, 64);
     padding-left: 5px;
-		line-height: 1.6em;
-		font-size: 1.2em;
+    line-height: 1.6em;
+    font-size: 1.2em;
     text-align: left;
-		font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman", Times, serif;
     font-variant: small-caps;
 }
+
 .sheet-rolltemplate-damage .sheet-tcat {
     font-style: italic;
 }
@@ -225,28 +279,29 @@ div.sheet-tab-content {
 .sheet-rolltemplate-damage td {
     padding-left: 5px;
 }
- 
-.sheet-rolltemplate-damage .inlinerollresult  {
+
+.sheet-rolltemplate-damage .inlinerollresult {
     background-color: #ffffff;
     border: none;
 }
 
 .sheet-rolltemplate-damage .inlinerollresult.importantroll {
-		color: #4A57ED;
+    color: #4A57ED;
     border: none;
 }
+
 .sheet-rolltemplate-damage .inlinerollresult.fullcrit {
-		color: #3FB315;
+    color: #3FB315;
     border: none;
 }
- 
+
 .sheet-rolltemplate-damage .inlinerollresult.fullfail {
-		color: #B31515;
+    color: #B31515;
     border: none;
 }
- 
+
 .sheet-rolltemplate-damage .inlinerollresult.importantroll {
-		color: #4A57ED;
+    color: #4A57ED;
     border: none;
 }
 
@@ -255,17 +310,17 @@ div.sheet-tab-content {
 .sheet-rolltemplate-skillcheck table {
     width: 189px;
     padding: 2px;
-		border: 1px solid;
+    border: 1px solid;
     background-color: #ffffff;
 }
 
 .sheet-rolltemplate-skillcheck th {
-		color: rgb(126, 45, 64);
+    color: rgb(126, 45, 64);
     padding-left: 5px;
-		line-height: 1.6em;
-		font-size: 1.2em;
+    line-height: 1.6em;
+    font-size: 1.2em;
     text-align: left;
-		font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman", Times, serif;
     font-variant: small-caps;
 }
 
@@ -278,34 +333,34 @@ div.sheet-tab-content {
 .sheet-rolltemplate-skillcheck .sheet-tcat {
     font-style: italic;
 }
- 
+
 .sheet-rolltemplate-skillcheck td {
     padding-left: 5px;
 }
- 
+
 .sheet-rolltemplate-skillcheck .sheet-arrow-right {
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
-		border-left: 180px solid rgb(126, 45, 64);
+    border-left: 180px solid rgb(126, 45, 64);
 }
- 
-.sheet-rolltemplate-skillcheck .inlinerollresult  {
+
+.sheet-rolltemplate-skillcheck .inlinerollresult {
     background-color: #ffffff;
     border: none;
 }
- 
+
 .sheet-rolltemplate-skillcheck .inlinerollresult.fullcrit {
-		color: #3FB315;
+    color: #3FB315;
     border: none;
 }
- 
+
 .sheet-rolltemplate-skillcheck .inlinerollresult.fullfail {
-		color: #B31515;
+    color: #B31515;
     border: none;
 }
- 
+
 .sheet-rolltemplate-skillcheck .inlinerollresult.importantroll {
-		color: #4A57ED;
+    color: #4A57ED;
     border: none;
 }
 
@@ -315,17 +370,17 @@ div.sheet-tab-content {
 .sheet-rolltemplate-powertext table {
     width: 189px;
     padding: 2px;
-		border: 1px solid;
+    border: 1px solid;
     background-color: #ffffff;
 }
 
 .sheet-rolltemplate-powertext th {
-		color: rgb(126, 45, 64);
+    color: rgb(126, 45, 64);
     padding-left: 5px;
-		line-height: 1.6em;
-		font-size: 1.2em;
+    line-height: 1.6em;
+    font-size: 1.2em;
     text-align: left;
-		font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman", Times, serif;
     font-variant: small-caps;
 }
 
@@ -338,13 +393,13 @@ div.sheet-tab-content {
 .sheet-rolltemplate-powertext .sheet-tcat {
     font-style: italic;
 }
- 
+
 .sheet-rolltemplate-powertext td {
     padding-left: 5px;
 }
- 
+
 .sheet-rolltemplate-powertext .sheet-arrow-right {
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
-		border-left: 180px solid rgb(126, 45, 64);
+    border-left: 180px solid rgb(126, 45, 64);
 }
