--- a/DragonTacticsSheet.css
+++ b/DragonTacticsSheet.css
@@ -38,7 +38,7 @@ GRID
 .sheet-main {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 50px 220px 240px auto auto auto auto auto auto;
+    grid-template-rows: 50px 210px 250px auto auto auto auto auto auto;
     grid-gap: 4px;
     grid-template-areas: "header header header"
         "common     defense     features"
@@ -152,6 +152,9 @@ MISC
 
 ******/
 
+.sheet-BasicInfo input[type=text] {
+	width: 200px
+}
 
 .sheet-inlineLabel {
     display: inline;
