--- a/DragonTacticsSheet.css
+++ b/DragonTacticsSheet.css
@@ -33,8 +33,7 @@ button[type=roll].sheet-skillcheckroll {
     border: none;
     background-color: transparent;
     background-image: none;
-    font-size: 1.05em;
-    font-weight: bold;
+    font-size: 18.2px;
     box-shadow: none;
     text-shadow: none;
     height: 28px;
@@ -65,6 +64,7 @@ button[type=roll].sheet-combatroll {
     height: 28px;
     margin: 0px;
     padding: 0px;
+    font-size: 18.2px;
 }
 
 /********
@@ -75,7 +75,7 @@ GRID
 
 .sheet-main {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 275px auto 285px;
     grid-template-rows: 50px 210px 250px auto auto auto auto auto auto;
     grid-gap: 4px;
     grid-template-areas: "header header header"
@@ -88,6 +88,7 @@ GRID
         "minor      backpack    worn"
         "minor      money       worn";
     min-width: 8.5in;
+    max-width: 11in;
 }
 
 input.sheet-arrow:not(:checked)~div.sheet-body {
@@ -191,7 +192,7 @@ MISC
 ******/
 
 .sheet-BasicInfo input[type=text] {
-	width: 200px
+	width: 200px;
 }
 
 .sheet-inlineLabel {
